<resources>
    <string name="app_name">MUF</string>
    <string name="facebook_app_id">234897551993103</string>
    <string name="fb_login_protocol_scheme">fb234897551993103</string>
    <string name="friends_list_title">friends_list</string>
    <string name="chatting_title">chatting</string>
    <string name="community_title">community</string>
    <string name="home_title">home</string>
    <string name="my_profile_title">my_profile</string>
    <string name="title_activity_add_post">AddPostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="username">Username</string>
    <string name="basicvalue">basicvalue</string>
    <string name="basic_profile_picture">basic_profile_picture</string>

    <string name="login_button">Login to Spotify</string>
    <string name="search">Search</string>
    <string name="cover_art_description">Cover art</string>
    <string name="search_hint">Search tracks</string>
</resources>