<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/publisher_profile_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="@string/basic_profile_picture" />

        <TextView
            android:id="@+id/publisher_nickname"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/basicvalue" />


</LinearLayout>